--- a/web-flash-card/package.json
+++ b/web-flash-card/package.json
@@ -12,8 +12,8 @@
     "format:check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
   },
   "dependencies": {
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
     "zod": "^4.1.13"
   },
   "devDependencies": {
