feat: improve workflow from feature and branch develop

--- a/.github/workflows/ci-ms-flash-card-tests.yml
+++ b/.github/workflows/ci-ms-flash-card-tests.yml
@@ -2,11 +2,16 @@ name: CI - ms-flash-card tests
 
 on:
   pull_request:
+    branches:
+      - main
+      - develop
     paths:
       - "ms-flash-card/**"
+      - ".github/workflows/**"
   push:
     branches:
       - main
+      - develop
     paths:
       - "ms-flash-card/**"
 
