--- a/ms-flash-card/package.json
+++ b/ms-flash-card/package.json
@@ -20,48 +20,53 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@google/genai": "^1.31.0",
-    "@nestjs/axios": "^4.0.1",
-    "@nestjs/common": "^11.0.1",
-    "@nestjs/core": "^11.0.1",
-    "@nestjs/jwt": "^11.0.1",
-    "@nestjs/passport": "^11.0.5",
-    "@nestjs/platform-fastify": "^11.1.6",
-    "@upstash/redis": "^1.35.5",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.2",
-    "dotenv": "^17.2.3",
-    "openai": "^6.9.1",
-    "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1",
-    "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1",
-    "uuid": "^9.0.1"
+    "@google/genai": "1.31.0",
+    "@nestjs/axios": "4.0.1",
+    "@nestjs/common": "11.1.9",
+    "@nestjs/core": "11.1.9",
+    "@nestjs/jwt": "11.0.1",
+    "@nestjs/passport": "11.0.5",
+    "@nestjs/platform-fastify": "11.1.6",
+    "@upstash/redis": "1.35.5",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.14.2",
+    "dotenv": "17.2.3",
+    "openai": "6.9.1",
+    "passport": "0.7.0",
+    "passport-jwt": "4.0.1",
+    "reflect-metadata": "0.2.2",
+    "rxjs": "7.8.2",
+    "uuid": "9.0.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "^9.18.0",
-    "@nestjs/cli": "^11.0.0",
-    "@nestjs/schematics": "^11.0.0",
-    "@nestjs/testing": "^11.0.1",
-    "@types/jest": "^29.5.0",
-    "@types/node": "^22.10.7",
-    "@types/passport-jwt": "^4.0.1",
-    "@types/supertest": "^6.0.2",
-    "@types/uuid": "^9.0.8",
-    "eslint": "^9.18.0",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-prettier": "^5.2.2",
-    "globals": "^16.0.0",
-    "jest": "^30.2.0",
-    "prettier": "^3.4.2",
-    "source-map-support": "^0.5.21",
-    "supertest": "^7.0.0",
-    "ts-jest": "^29.4.4",
-    "ts-loader": "^9.5.2",
-    "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.7.3",
-    "typescript-eslint": "^8.20.0"
+    "@eslint/eslintrc": "3.2.0",
+    "@eslint/js": "9.18.0",
+    "@nestjs/cli": "11.0.0",
+    "@nestjs/schematics": "11.0.0",
+    "@nestjs/testing": "11.0.1",
+    "@types/jest": "29.5.0",
+    "@types/node": "22.10.7",
+    "@types/passport-jwt": "4.0.1",
+    "@types/supertest": "6.0.2",
+    "@types/uuid": "9.0.8",
+    "eslint": "9.18.0",
+    "eslint-config-prettier": "10.0.1",
+    "eslint-plugin-prettier": "5.2.2",
+    "globals": "16.0.0",
+    "jest": "29.7.0",
+    "prettier": "3.4.2",
+    "source-map-support": "0.5.21",
+    "supertest": "7.1.4",
+    "ts-jest": "29.4.4",
+    "ts-loader": "9.5.2",
+    "ts-node": "10.9.2",
+    "tsconfig-paths": "4.2.0",
+    "typescript": "5.9.3",
+    "typescript-eslint": "8.20.0"
+  },
+  "packageManager": "pnpm@9.15.5",
+  "engines": {
+    "node": "22.x",
+    "pnpm": "9.x"
   }
 }
