feat: improve yml to deploy

--- a/.github/workflows/ci-ms-flash-card-deploy.yml
+++ b/.github/workflows/ci-ms-flash-card-deploy.yml
@@ -1,6 +1,13 @@
 name: CD - Deploy ms-flash-card
 
 on:
+  pull_request:
+    branches:
+      - main
+      - develop
+    paths:
+      - "ms-flash-card/**"
+      - ".github/workflows/**"
   push:
     branches:
       - main
