feat: improve workflow yml to avoid block to merge and deploy in merge

--- a/.github/workflows/ci-ms-flash-card-deploy.yml
+++ b/.github/workflows/ci-ms-flash-card-deploy.yml
@@ -1,19 +1,11 @@
 name: CD - Deploy ms-flash-card
 
 on:
-  pull_request:
-    branches:
-      - main
-      - develop
+  push:
+    branches: [develop]
     paths:
       - "ms-flash-card/**"
       - ".github/workflows/**"
-  push:
-    branches:
-      - main
-      - develop
-    paths:
-      - "ms-flash-card/**"
 
 jobs:
   deploy:
