--- a/.github/workflows/ci-ms-flash-card-tests.yml
+++ b/.github/workflows/ci-ms-flash-card-tests.yml
@@ -1,6 +1,11 @@
 name: CI - Feature Validation
 
 on:
+  pull_request:
+    branches: [develop]
+    paths:
+      - "ms-flash-card/**"
+      - ".github/workflows/**"
   push:
     branches: [develop]
     paths:
@@ -10,23 +15,18 @@ on:
 jobs:
   test-backend:
     runs-on: ubuntu-latest
-
     defaults:
       run:
         working-directory: ms-flash-card
-
     steps:
       - uses: actions/checkout@v4
-
       - uses: actions/setup-node@v4
         with:
           node-version: 22
-
       - uses: pnpm/action-setup@v3
         with:
           version: 9
           run_install: false
-
       - run: pnpm install --frozen-lockfile
       - run: pnpm lint
       - run: pnpm test
